// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article summary component with a single paragraph 1`] = `
<style>
{
  "IS1": {
    "color": "rgba(51,51,51,1)",
    "fontFamily": "TimesModern-Bold",
    "fontSize": "22px",
    "fontWeight": "400",
    "lineHeight": "27px",
    "marginBottom": "5px",
  },
  "IS2": {
    "WebkitBoxLines": "multiple",
    "WebkitFlexWrap": "wrap",
    "color": "rgba(105,105,105,1)",
    "flexWrap": "wrap",
    "fontFamily": "TimesDigitalW04",
    "lineHeight": "20px",
    "marginBottom": "10px",
    "msFlexWrap": "wrap",
  },
  "IS3": {
    "color": "rgba(105,105,105,1)",
    "fontFamily": "GillSansMTStd-Medium",
    "fontSize": "13px",
    "lineHeight": "15px",
    "marginBottom": "5px",
  },
  "IS4": {
    "color": "rgba(105,105,105,1)",
    "fontFamily": "GillSansMTStd-Medium",
    "fontSize": "13px",
    "lineHeight": "15px",
    "marginBottom": "5px",
  },
  "S1": {
    "margin-bottom": "0px",
  },
  "S2": {
    "color": "inherit",
    "font-family": "inherit",
    "font-size": "inherit",
    "margin-bottom": "0px",
  },
  "S3": {
    "font-size": "14px",
  },
  "S4": {
    "margin-bottom": "0px",
  },
}
</style>

<div
  className="S4"
>
  <div
    className="S1"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <h3
    aria-level="3"
    className="IS1"
    role="heading"
  >
    Test Headline
  </h3>
  <div
    className="IS2 S3"
  >
    <span
      className="S2"
    >
      
      Test paragraph
      ...
    </span>
  </div>
  <div
    className="IS3"
    data-testid="datePublication"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
  <div
    className="IS4"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "attributes": Object {
              "slug": "camilla-long",
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Camilla Long",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "author",
          },
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": ", Environment Editor",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "inline",
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`2. article summary content component with the given style 1`] = `
<style>
{
  "IS1": {
    "WebkitBoxLines": "multiple",
    "WebkitFlexWrap": "wrap",
    "color": "rgba(105,105,105,1)",
    "flexWrap": "wrap",
    "fontFamily": "TimesDigitalW04",
    "lineHeight": "20px",
    "marginBottom": "10px",
    "msFlexWrap": "wrap",
  },
  "S1": {
    "color": "inherit",
    "font-family": "inherit",
    "font-size": "inherit",
    "margin-bottom": "0px",
  },
  "S2": {
    "font-size": "14px",
  },
}
</style>

<div
  className="IS1 S2"
>
  <span
    className="S1"
  >
    
    Test
    ...
  </span>
</div>
`;
